--- a/xpi/content/css/notabfog.css
+++ b/xpi/content/css/notabfog.css
@@ -1,6 +1,7 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul){
+	#TabsToolbar:not(:-moz-lwtheme)::after,
 	#TabsToolbar:not(:-moz-lwtheme)::before {
 	  box-shadow: none !important;
 	}
