--- a/xpi/content/css/alt_appbutton_icons.css
+++ b/xpi/content/css/alt_appbutton_icons.css
@@ -11,7 +11,7 @@
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/appbutton-inv.png") !important;
 	}
 	
-	.customization-target > #ctr_appbutton > .toolbarbutton-icon {
+	.customization-target:not(#TabsToolbar) > #ctr_appbutton > .toolbarbutton-icon {
 	  padding-left:7px !important;
 	  padding-right:7px !important;
 	}
