--- a/xpi/content/css/tabs_squared-osx2.css
+++ b/xpi/content/css/tabs_squared-osx2.css
@@ -37,6 +37,10 @@
 	  margin-right: -8px !important;
 	}
 	
+	#tabbrowser-tabs{
+	  min-height: 0px !important;
+	}
+	
 	.tabbrowser-tab,
 	.tabs-newtab-button{
 	  height:28px !important;
@@ -179,6 +183,7 @@
 	  background-size: calc(100% - 2px) calc(100% - 2px) !important;
 	}
 	
+	#TabsToolbar:not(:-moz-lwtheme)::after,
 	#TabsToolbar:not(:-moz-lwtheme)::before {
 	  box-shadow: none !important;
 	}
