--- a/xpi/content/css/tabs_squared-r-osx.css
+++ b/xpi/content/css/tabs_squared-r-osx.css
@@ -41,6 +41,10 @@
 	  border-bottom:0 !important;
 	}
 	
+	#tabbrowser-tabs{
+	  min-height: 0px !important;
+	}
+	
 	.tabbrowser-tab,
 	.tabs-newtab-button{
 	  height:28px !important;
@@ -141,6 +145,7 @@
 	  background-size: calc(100% - 2px) calc(100% - 2px) !important;
 	}
 	
+	#TabsToolbar:not(:-moz-lwtheme)::after,
 	#TabsToolbar:not(:-moz-lwtheme)::before {
 	  box-shadow: none !important;
 	}
