--- a/xpi/content/css/tabs_squared-r-osx2.css
+++ b/xpi/content/css/tabs_squared-r-osx2.css
@@ -35,6 +35,9 @@
 	.tabbrowser-tabs{
 	  border-bottom:0 !important;
 	}
+	#tabbrowser-tabs{
+	  min-height: 0px !important;
+	}
 	
 	.tabbrowser-tab,
 	.tabs-newtab-button{
@@ -168,6 +171,7 @@
 	  background-size: calc(100% - 2px) calc(100% - 2px) !important;
 	}
 	
+	#TabsToolbar:not(:-moz-lwtheme)::after,
 	#TabsToolbar:not(:-moz-lwtheme)::before {
 	  box-shadow: none !important;
 	}
