--- a/xpi/content/css/tabs_squaredc2.css
+++ b/xpi/content/css/tabs_squaredc2.css
@@ -99,6 +99,12 @@
 	}
 	
 	/* Tabs Toolbar */
+	
+	#tabbrowser-tabs{
+	  min-height: 0px !important;
+	}
+
+	#TabsToolbar:not(:-moz-lwtheme)::after,
 	#TabsToolbar:not(:-moz-lwtheme)::before {
 	  box-shadow: none !important;
 	}
@@ -109,8 +115,13 @@
 	  min-height: 0px !important;
 	}
 	
-	#main-window[tabsintitlebar]:not([tabsontop='false']):not([sizemode="maximized"]) #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
+	/*#main-window[tabsintitlebar]:not([tabsontop='false']):not([sizemode="maximized"]) #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
 	  padding-top: 3px !important;
+	}*/
+	
+	/**/
+	#TabsToolbar #ctr_appbutton{
+	  margin-bottom:-1px !important;
 	}
 	
 	/* TMP support */
