--- a/xpi/content/css/tabs_curved-r-osx.css
+++ b/xpi/content/css/tabs_curved-r-osx.css
@@ -24,9 +24,9 @@
 	}
 
 	.tabs-newtab-button:not(:-moz-lwtheme):hover{
-	  background-image: url(chrome://browser/skin/tabbrowser/tab-background-start.png),
-						url(chrome://browser/skin/tabbrowser/tab-background-middle.png),
-						url(chrome://browser/skin/tabbrowser/tab-background-end.png) !important;
+	  background-image: url(chrome://classic_theme_restorer/content/images/ntab-hov-start.png),
+						url(chrome://classic_theme_restorer/content/images/ntab-hov-middle.png),
+						url(chrome://classic_theme_restorer/content/images/ntab-hov-end.png) !important;
 	}
 
 	.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover) .tab-background-start,
@@ -71,7 +71,17 @@
 	  background-clip: padding-box, padding-box, content-box !important;
 	  background-image: url(chrome://browser/skin/tabbrowser/tab-active-middle.png), linear-gradient(transparent, transparent 2px, #cdcdcd 0px,#d3d3d3), none !important;
 	}
+
+	#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
+	.tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
+	#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
+	  background-image: none !important;
+	}
 	
+	#main-window[tabsintitlebar]:not([sizemode="maximized"]):not([inFullscreen]) #toolbar-menubar:-moz-any([autohide="true"][inactive], :not([autohide])) + #TabsToolbar .tab-background-middle:not([selected=true]) {
+	  clip-path: none !important;
+	}
+
 	.tabbrowser-tab[selected=true]:not(:-moz-lwtheme){
 	  margin-top:-1px !important;
 	}
