--- a/xpi/content/css/tabs_squared-osx.css
+++ b/xpi/content/css/tabs_squared-osx.css
@@ -39,6 +39,9 @@
 
 	.tabbrowser-tabs{
 	  border-bottom:0 !important;
+	}
+	
+	#tabbrowser-tabs:not([overflow="true"]) {
 	  margin-right: -8px !important;
 	}
 	
