--- a/xpi/content/css/mode_icons_big.css
+++ b/xpi/content/css/mode_icons_big.css
@@ -3,7 +3,7 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-	#nav-bar :-moz-any(#home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #cut-button, #copy-button, #paste-button, #fullscreen-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #sync-button, #feed-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button)[cui-areatype="toolbar"] {
+	#nav-bar :-moz-any(#home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #cut-button, #copy-button, #paste-button, #fullscreen-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #sync-button, #feed-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button)[cui-areatype="toolbar"] {
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/menuPanel.png) !important;
 	}
 	
@@ -106,6 +106,10 @@
 	
 	#nav-bar #email-link-button[cui-areatype="toolbar"] {
 	  -moz-image-region: rect(0, 800px, 32px, 768px) !important;
+	}
+	
+	#nav-bar #sidebar-button[cui-areatype="toolbar"]{
+	  -moz-image-region: rect(0, 864px, 32px, 832px) !important;
 	}
 
 	#nav-bar #switch-to-metro-button[cui-areatype="toolbar"] {
