--- a/xpi/content/css/mode_txtonly.css
+++ b/xpi/content/css/mode_txtonly.css
@@ -68,7 +68,35 @@
     #urlbar:-moz-locale-dir(rtl) {
       border-right:1px solid #b4c1cf !important;
     }
-    #urlbar[focused="true"]:-moz-locale-dir(rtl) {
-      border-right:1px solid #72c0fe !important;
-    }
+	@media all and (-moz-windows-theme:aero) {
+		#urlbar[focused="true"]:-moz-locale-dir(rtl) {
+		  border-right:1px solid #72c0fe !important;
+		}
+	}
+	
+	#downloads-button .toolbarbutton-icon{
+	  margin: -4px !important;
+	}
+	
+	/* support for star button in urlbar */
+	#nav-bar #urlbar-container #bookmarks-menu-button .toolbarbutton-text {
+	  display: none !important;
+	  visibility: collapse !important;
+	}
+	#navigator-toolbox  #nav-bar #urlbar-container #bookmarks-menu-button:not(.tabs-newtab-button):not(.tab-close-button) .toolbarbutton-icon {
+	  visibility: visible !important;
+	}
+	#nav-bar #urlbar-container #bookmarks-menu-button {
+	  min-width: inherit !important;
+	}
+	#nav-bar #urlbar-container #bookmarks-menu-button:hover{
+	  border: 0px solid transparent !important;
+      background-image: linear-gradient(hsla(0,0%,100%,.0), hsla(0,0%,100%,.0)) !important;
+      border-color: hsla(210,54%,20%,.0) hsla(210,54%,20%,.0) hsla(210,54%,20%,.0) !important;
+      box-shadow: none !important;
+	  padding:0 !important;
+	}
+	#nav-bar #urlbar-container #bookmarks-menu-button .toolbarbutton-icon {
+	  margin: -8px 4px !important;
+	}
 }
