--- a/xpi/content/css/winaero/mode_icons_and_text_extra.css
+++ b/xpi/content/css/winaero/mode_icons_and_text_extra.css
@@ -20,6 +20,11 @@
 	  padding: 0px !important;
 	  margin: -2px 0 0 0 !important;
 	}
+	#nav-bar #bookmarks-menu-button .toolbarbutton-icon {
+	  min-width: 19px !important;
+	  height: 20px !important;
+	  margin-top:-3px !important;
+	}
 
 	#nav-bar .toolbarbutton-1:not([type="menu-button"]):not([type="menu"]) .toolbarbutton-text {
 	  padding: 0px !important;
