--- a/xpi/content/css/winxp/overlayextra.css
+++ b/xpi/content/css/winxp/overlayextra.css
@@ -58,49 +58,54 @@
 	
 	@media not all and (-moz-windows-classic) {
 		#appmenuPrimaryPane{
-			-moz-appearance:none;
-			background:white;
-			box-shadow:none;
-			border:0;
+		  -moz-appearance:none;
+		  background:white;
+		  box-shadow:none;
+		  border:0;
 		}
 		#appmenuSecondaryPane{
-			-moz-appearance:none;
-			background:#f1f5fb;
-			box-shadow:none;
-			border:0;
-			border-left:1px solid #d6e5f5;
+		  -moz-appearance:none;
+		  background:#f1f5fb;
+		  box-shadow:none;
+		  border:0;
+		  border-left:1px solid #d6e5f5;
 		}
 		
-		#appmenuPrimaryPane menuseparator {
+		#appmenuPrimaryPane > menuseparator {
 		  -moz-appearance: none;
 		  margin-top: 3px;
 		  margin-bottom: 3px;
-		  margin-right:3px;
-		  -moz-margin-start: 30px;
 		  padding: 0;
 		  border-top: 1px solid #d6e5f5;
 		  border-bottom: none;
 		}
-
-		#appmenuPrimaryPane #menu_newTabmenupopup,
-		#appmenuPrimaryPane #menu_newEditmenupopup,
-		#appmenuPrimaryPane #menu_newPrintmenupopup,
-		#appmenuPrimaryPane #newmenuWebDeveloperPopup {
-			-moz-appearance:none;
-			background:white;
-			box-shadow:none;
-			border:1px solid #a0a0a0;
+		
+		#appmenuPrimaryPane:-moz-locale-dir(ltr) > menuseparator {
+		  -moz-margin-start: 20px;
 		}
 		
-		#appmenuSecondaryPane #newbookmarksMenuPopup,
-		#appmenuSecondaryPane #newHistorymenuPopup,
-		#appmenuSecondaryPane #menu_newHelpPopup,
-		#appmenuSecondaryPane #menu_newPreferencesmenuPopup{
-			-moz-appearance:none;
-			background:#f1f5fb;
-			box-shadow:none;
-			border:1px solid #a0a0a0;
+		#appmenuPrimaryPane:-moz-locale-dir(rtl) > menuseparator {
+		  -moz-margin-end: 20px;
 		}
+		
+		#ctr_appbuttonPopup > hbox > vbox > menu > menupopup,
+		#ctr_appbuttonPopup > hbox > vbox > hbox > menu > menupopup{
+		  -moz-appearance:none;
+		  box-shadow: 1px 0 12px rgb(204,214,234);
+		  padding:2px;
+		  border:1px solid #a0a0a0;
+		}
+	
+		#ctr_appbuttonPopup > hbox > #appmenuPrimaryPane > menu > menupopup,
+		#ctr_appbuttonPopup > hbox > #appmenuPrimaryPane > hbox > menu > menupopup {
+		  background: white;
+		}
+		
+		#ctr_appbuttonPopup > hbox > #appmenuSecondaryPane > menu > menupopup,
+		#ctr_appbuttonPopup > hbox > #appmenuSecondaryPane > hbox > menu > menupopup{
+		  background: #f1f5fb;
+		}
+
 	}
 	
 	#appmenu-edit-label,
