--- a/xpi/content/css/spaces_extra.css
+++ b/xpi/content/css/spaces_extra.css
@@ -9,7 +9,7 @@
 	  border: 1px solid black !important;
 	}
 	toolbarpaletteitem[place="palette"] > toolbarseparator{
-	  background: url("chrome://classic_theme_restorer/content/images/separator.png") center no-repeat;
+	  /*background: url("chrome://classic_theme_restorer/content/images/separator.png") center no-repeat;*/
 	}
 	toolbarpaletteitem[place="palette"] > toolbarspacer{
 	  background: url("chrome://classic_theme_restorer/content/images/space1.png") center no-repeat;
@@ -21,7 +21,7 @@
 	  border: 1px solid black !important;
 	}
 	toolbarpaletteitem[place="toolbar"] > toolbarseparator{
-	  background: url("chrome://classic_theme_restorer/content/images/separator.png") center no-repeat;
+	  /*background: url("chrome://classic_theme_restorer/content/images/separator.png") center no-repeat;*/
 	  min-width: 5px;
 	  width: 5px;
 	}
@@ -45,7 +45,7 @@
 	  background: url("chrome://classic_theme_restorer/content/images/space1.png") center no-repeat;
 	}
 	
-	/* adjustments for spaces, flexible spaces, separators in panel ui menu */
+	/* adjustments for spaces, flexible spaces, separators in panel menu */
 	toolbarspring[cui-areatype="menu-panel"]{
 	  -moz-appearance: none !important;
 	  width: 260px !important;
