--- a/xpi/content/css/alttabstoolbar.css
+++ b/xpi/content/css/alttabstoolbar.css
@@ -6,10 +6,16 @@
 		#main-window[defaultfxtheme="true"][tabsontop="false"] #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme){
 		  background: linear-gradient(to bottom,#aabccf 1px, #ffffff 1px,#d0d7ec,#e9ecfa) !important;
 		}
+		#main-window[defaultfxtheme="true"]:not([tabsontop="false"]) #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme){
+		  background: #dbeaf9 !important;
+		}
 	}
 	@media not all and (-moz-windows-theme:aero) {
 		#main-window[defaultfxtheme="true"][tabsontop="false"] #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme){
 		  background: linear-gradient(to bottom,#808080 1px, #ffffff 1px,-moz-Dialog,-moz-Dialog) !important;
+		}
+		#main-window[defaultfxtheme="true"]:not([tabsontop="false"]) #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme){
+		  background: -moz-Dialog !important;
 		}
 	}
 	/* Win8*/
@@ -17,6 +23,9 @@
 	  @media not all and (-moz-windows-glass) {
 		#main-window[defaultfxtheme="true"][tabsontop="false"] #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme){
 		  background: linear-gradient(to bottom,#808080 1px, #ffffff 1px,-moz-Dialog,-moz-Dialog) !important;
+		}
+		#main-window[defaultfxtheme="true"]:not([tabsontop="false"]) #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme){
+		  background: -moz-Dialog !important;
 		}
 	  }
 	}
