--- a/xpi/content/css/closetab_tb_end.css
+++ b/xpi/content/css/closetab_tb_end.css
@@ -6,6 +6,7 @@
 	}
 	#ctraddon_tabs-closebutton{
 	  visibility: visible !important;
+	  -moz-margin-end: -3px !important;
 	}
 	#titlebar-placeholder-on-TabsToolbar-for-captions-buttons{
 	  -moz-margin-start: 0px !important;
