--- a/xpi/content/css/winaero/starinurlextra.css
+++ b/xpi/content/css/winaero/starinurlextra.css
@@ -20,4 +20,8 @@
 	#urlbar-container #bookmarks-menu-button[starred]:hover:active .toolbarbutton-icon {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton2.png");
 	}
+
+	#main-window[defaultfxtheme="true"] #editBookmarkPanelStarIcon {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/starred48.png") !important;
+	}
 }
